@@ -617,6 +617,7 @@ Rails.application.routes.draw do
             get :status
             post :cancel
             post :retry
+            post :erase
           end
 
           resource :artifacts, only: [] do
