@@ -69,6 +69,7 @@ v 8.5.0 (unreleased)
   - Allow SAML users to login with no previous account without having to allow
     all Omniauth providers to do so.
   - Allow existing users to auto link their SAML credentials by logging in via SAML
+  - Make it possible to erase a build (trace, artifacts) using UI and API
 
 v 8.4.4
   - Update omniauth-saml gem to 1.4.2
